--- a/Readme
+++ b/Readme
@@ -1,1 +1,6 @@
-
+1. Use eic lAger data examples in https://eicweb.phy.anl.gov/monte_carlo/lager/-/tree/master/examples/eic?ref_type=heads to create the .json input files.
+2. NB: the installation of lAger is here found https://eicweb.phy.anl.gov/monte_carlo/lager
+3. Run ./bin/lager -c desire_directory_with_your_file/the_file.json -r 1 -o desire_directory_where_you_want _output 
+4. Further examples of how to run your files are found here https://eicweb.phy.anl.gov/monte_carlo/lager
+5. NB: DVMP study in our case requires running the afterburner on the hepmc from step 3 above
+6. Following instructions on https://github.com/eic/afterburner
