--- a/Readme
+++ b/Readme
@@ -2,5 +2,5 @@
 2. NB: the installation of lAger is here found https://eicweb.phy.anl.gov/monte_carlo/lager
 3. Run ./bin/lager -c desire_directory_with_your_file/the_file.json -r 1 -o desire_directory_where_you_want _output 
 4. Further examples of how to run your files are found here https://eicweb.phy.anl.gov/monte_carlo/lager
-5. NB: DVMP study in our case requires running the afterburner on the hepmc from step 3 above
+5. NB: DVMP study in our case requires running the afterburner on the hepmc from step 3 above with high acceptance (hi acc)
 6. Following instructions on https://github.com/eic/afterburner
